<resources>
    <string name="app_name">SimpleTodoApp</string>
    <string name="image_description">Image Description</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="month_display_header_title">%s, %d</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="task_time">Task Time</string>
    <string name="task_name_colon">Task Name:</string>
    <string name="task_description_colon">Task Description:</string>
    <string name="task_time_colon">Task Time:</string>
    <string name="add_task">Add Task</string>
</resources>