<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_6A9C89"
            android:text="@string/mon"
            android:textSize="@dimen/text_size_18"
            android:textAlignment="center"
            tools:text="@string/mon"/>
        <TextView
            android:id="@+id/tv_tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_6A9C89"
            android:text="@string/tue"
            android:textSize="@dimen/text_size_18"
            android:textAlignment="center"
            tools:text="@string/tue"/>
        <TextView
            android:id="@+id/tv_wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_6A9C89"
            android:text="@string/wed"
            android:textSize="@dimen/text_size_18"
            android:textAlignment="center"
            tools:text="@string/wed"/>
        <TextView
            android:id="@+id/tv_thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_6A9C89"
            android:text="@string/thu"
            android:textSize="@dimen/text_size_18"
            android:textAlignment="center"
            tools:text="@string/thu"/>
        <TextView
            android:id="@+id/tv_fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_6A9C89"
            android:text="@string/fri"
            android:textSize="@dimen/text_size_18"
            android:textAlignment="center"
            tools:text="@string/fri"/>
        <TextView
            android:id="@+id/tv_sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_6A9C89"
            android:text="@string/sat"
            android:textSize="@dimen/text_size_18"
            android:textAlignment="center"
            tools:text="@string/sat"/>
        <TextView
            android:id="@+id/tv_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_6A9C89"
            android:text="@string/sun"
            android:textSize="@dimen/text_size_18"
            android:textAlignment="center"
            tools:text="@string/sun"/>
    </LinearLayout>
</layout>